added setiing banner image and business profile image

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,10 @@
         <activity
             android:name=".ProfileManagement"
             android:theme="@style/AppThemeNoActionBar" />
-        <activity android:name=".RetailStore.AddToInvetoryRetailStore"
-            android:theme="@style/AppThemeNoActionBar"
-            ></activity>
+        <activity
+            android:name=".RetailStore.AddToInvetoryRetailStore"
+            android:theme="@style/AppThemeNoActionBar" />
+        <activity android:name=".RetailStore.InventoryRetailStore"></activity>
     </application>
 
 </manifest>
