--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,12 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:multidex:1.0.0'
+
+    //glide
+    compile 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 }
+
 
 
 
