--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     //glide
     compile 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+
+    //sliding root nav
+    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
 }
 
 
