--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug{
+            debuggable true
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -41,6 +45,10 @@ dependencies {
 
     //sliding root nav
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
+
+    //loading view
+    compile 'com.victor:lib:1.0.4'
+    compile 'com.wang.avi:library:2.1.3'
 }
 
 
