--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     //loading view
     compile 'com.victor:lib:1.0.4'
     compile 'com.wang.avi:library:2.1.3'
+
+    //material Dialog
+    compile 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
 
 
