--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     compile 'com.android.support:multidex:1.0.0'
 
     //glide
-    compile 'com.github.bumptech.glide:glide:4.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
 
     //sliding root nav
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
@@ -53,12 +53,6 @@ dependencies {
     //material Dialog
     compile 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
-
-
-
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
