--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name="com.pointofsalesandroid.androidbasedpos_inventory.MyFirebaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,11 +30,8 @@
         <activity
             android:name=".ProfileManagement"
             android:theme="@style/AppThemeNoActionBar" />
-        <activity
-            android:name=".RetailStore.AddToInvetoryRetailStore"
-            android:theme="@style/AppThemeNoActionBar" />
-        <activity android:name=".RetailStore.InventoryRetailStore" />
-        <activity android:name=".Restaurant.UpdateProductActiivty"></activity>
+        <activity android:name=".Restaurant.UpdateProductActiivty"
+            android:theme="@style/AppThemeNoActionBar"></activity>
     </application>
 
 </manifest>
