--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,19 @@
     package="com.pointofsalesandroid.androidbasedpos_inventory">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="com.pointofsalesandroid.androidbasedpos_inventory.MyFirebaseApp"
+        android:name=".MyFirebaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,8 +40,31 @@
         <activity
             android:name=".ProfileManagement"
             android:theme="@style/AppThemeNoActionBar" />
-        <activity android:name=".Restaurant.UpdateProductActiivty"
-            android:theme="@style/AppThemeNoActionBar"></activity>
+        <activity
+            android:name=".Restaurant.UpdateProductActiivty"
+            android:theme="@style/AppThemeNoActionBar" />
+        <activity
+            android:name=".UpdateProfile"
+            android:theme="@style/AppThemeNoActionBar" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsProfileUpdateActivity"
+            android:label="@string/title_activity_maps_profile_update">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.pointofsalesandroid.androidbasedpos_inventory.Restaurant.UpdateProductActiivty" />
+        </activity>
     </application>
 
 </manifest>
